[project]
name = "pyproject-toml"
version = "16.1.5"
requires-python = ">=3.10"

authors = [
    {name = "ncaravac"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.3.3"
requests = "^2.32.5"
matplotlib = "^3.10.8"
numpy = "^2.2.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"